[package]
name        = "sbus"
version     = "0.3.0"
edition     = "2024"
authors     = ["Sajjad Khan <sajjadanwar0@gmail.com>"]
description = "S-Bus v36: ORI middleware with full Raft replication"
license     = "MIT"
repository  = "https://github.com/sajjadanwar0/sbus"

[[bin]]
name = "sbus-server"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",      features = ["full"] }
axum               = { version = "0.8",    features = ["macros"] }
serde              = { version = "1.0",    features = ["derive"] }
serde_json         = "1.0"
sha2               = "0.11.0"
hex                = "0.4"
chrono             = { version = "0.4",    features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3",    features = ["env-filter"] }
tower-http         = { version = "0.6",    features = ["cors", "trace"] }
thiserror          = "2"

hyper              = { version = "1",      features = ["client","http1"] }
uuid               = { version = "1",      features = ["v4"] }
async-trait        = "0.1"
openraft           = { version = "=0.8.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sled               = "0.34"


[dev-dependencies]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1