[package]
name = "sbus-proxy"
version = { workspace = true }
edition = "2024"
rust-version = "1.85.0"
description = "Transparent LLM API proxy that instruments agent reads to S-Bus DeliveryLog"
license = "MIT"

[[bin]]
name = "sbus-proxy"
path = "src/main.rs"

# ─── Dependencies ──────────────────────────────────────────────────────────
[dependencies]
# HTTP server + reverse proxy
axum               = { version = "0.8", features = ["http2"] }
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["trace", "cors"] }
hyper              = { version = "1", features = ["full"] }
hyper-util         = { version = "0.1", features = ["tokio", "client-legacy"] }

# HTTP client (for upstream + S-Bus)
reqwest            = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# JSON parsing + SSE streaming
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
bytes              = "1"
futures-util       = "0.3"
eventsource-stream = "0.2"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
envy               = "0.4"
anyhow             = "1"
thiserror          = "1"

# Regex for keyword extraction
regex              = "1"
once_cell          = "1"

# Fast hashers
ahash              = "0.8"

[dev-dependencies]
wiremock           = "0.6"
pretty_assertions  = "1"
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }