[package]
name         = "sbus-server"
description  = "S-Bus: ORI middleware with full Raft replication"
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
authors      .workspace = true
license      .workspace = true
repository   .workspace = true

[[bin]]
name = "sbus-server"
path = "src/main.rs"

[dependencies]
tokio              .workspace = true
axum               .workspace = true
tower-http         .workspace = true
serde              .workspace = true
serde_json         .workspace = true
tracing            .workspace = true
tracing-subscriber .workspace = true
thiserror          .workspace = true
chrono             .workspace = true
sha2               .workspace = true
hex                .workspace = true

reqwest            = { version = "0.12",   features = ["json"] }
async-trait        = "0.1"
openraft           = { version = "=0.8.4", features = ["serde"] }
sled               = "0.34"
uuid               = { version = "1.23.1", features = ["v4"] }
